src/index.css
@import "tailwindcss";

body {
    background: linear-gradient(270deg, #020617, #000000, #020617);
    background-size: 400% 400%;
    animation: gradientShift 5s ease infinite;
}

@keyframes gradientShift {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

